--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,21 @@
 anyio==3.6.2
-attrs==23.1.0
-certifi==2023.5.7
-charset-normalizer==3.1.0
+autopep8==2.0.2
 click==8.1.3
 colorama==0.4.6
-fastapi==0.95.2
+et-xmlfile==1.1.0
+fastapi==0.95.1
+greenlet==2.0.2
 h11==0.14.0
 idna==3.4
-isodate==0.6.1
-lxml==4.9.2
-platformdirs==3.5.1
+mysql-connector-python==8.0.33
+openpyxl==3.1.2
+Pillow==9.4.0
+protobuf==3.20.3
+pycodestyle==2.10.0
 pydantic==1.10.7
-pytz==2023.3
-requests==2.30.0
-requests-file==1.5.1
-requests-toolbelt==1.0.0
-six==1.16.0
 sniffio==1.3.0
-starlette==0.27.0
+SQLAlchemy==2.0.9
+starlette==0.26.1
+tomli==2.0.1
 typing_extensions==4.5.0
-urllib3==2.0.2
-uvicorn==0.22.0
-xmltodict==0.13.0
-zeep==4.2.1
-gunicorn
+uvicorn==0.21.1
