--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,32 @@
 anyio==3.6.2
-autopep8==2.0.2
+attrs==23.1.0
+certifi==2023.5.7
+charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
 et-xmlfile==1.1.0
-fastapi==0.95.1
-greenlet==2.0.2
+fastapi==0.95.2
 h11==0.14.0
 idna==3.4
-mysql-connector-python==8.0.33
+isodate==0.6.1
+lxml==4.9.2
+numpy==1.24.3
 openpyxl==3.1.2
-Pillow==9.4.0
-protobuf==3.20.3
-pycodestyle==2.10.0
+pandas==2.0.1
+platformdirs==3.5.1
 pydantic==1.10.7
+python-dateutil==2.8.2
+pytz==2023.3
+requests==2.30.0
+requests-file==1.5.1
+requests-toolbelt==1.0.0
+six==1.16.0
 sniffio==1.3.0
-SQLAlchemy==2.0.9
-starlette==0.26.1
-tomli==2.0.1
+starlette==0.27.0
 typing_extensions==4.5.0
-uvicorn==0.21.1
+tzdata==2023.3
+urllib3==2.0.2
+uvicorn==0.22.0
+xmltodict==0.13.0
+zeep==4.2.1
 gunicorn
