--- a/requirements.txt
+++ b/requirements.txt
@@ -6,16 +6,19 @@ click==8.1.3
 colorama==0.4.6
 et-xmlfile==1.1.0
 fastapi==0.95.2
+gunicorn==21.2.0
 h11==0.14.0
 idna==3.4
 isodate==0.6.1
 lxml==4.9.2
 numpy==1.24.3
 openpyxl==3.1.2
+packaging==23.1
 pandas==2.0.1
 platformdirs==3.5.1
 pydantic==1.10.7
 python-dateutil==2.8.2
+python-multipart==0.0.6
 pytz==2023.3
 requests==2.30.0
 requests-file==1.5.1
@@ -29,4 +32,3 @@ urllib3==2.0.2
 uvicorn==0.22.0
 xmltodict==0.13.0
 zeep==4.2.1
-gunicorn
