--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,8 @@ pandas==2.0.1
 platformdirs==3.5.1
 pydantic==1.10.7
 python-dateutil==2.8.2
+python-decouple==3.8
+python-dotenv==1.0.0
 python-multipart==0.0.6
 pytz==2023.3
 requests==2.30.0
