api ssw para cotação

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 SMTP_USER  ='dev@salexpress.com.br'
-SMTP_PASSWORD  = 'Mito010894@@'
+SMTP_PASSWORD  = '@@Mito010894'
 SMTP_SERVER = "smtp.gmail.com"
 SMTP_PORT = 587
